Fixed overlapping

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -199,7 +199,7 @@ footer {
   -webkit-font-smoothing:subpixel-antialiased;
 }
 
-@media print, screen and (max-width: 960px) {
+@media print, screen and (max-width: 1260px) {
 
   div.wrapper {
     width:auto;
@@ -274,13 +274,22 @@ footer {
   }
 }
 
-div.card{box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);padding: 25px 20px 25px 20px;width: auto;}
-div.card:hover{box-shadow:0 4px 10px 0 rgba(0,0,0,0.2),0 4px 20px 0 rgba(0,0,0,0.19)}
+div.card {
+	box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); 
+	padding: 25px 20px 25px 20px; 
+	width: auto;
+}
+
+div.card:hover{
+	box-shadow:0 4px 10px 0 rgba(0,0,0,0.2),0 4px 20px 0 rgba(0,0,0,0.19)
+}
 
 a.card:hover {
 	font-weight: normal;
 }
-a.card:visited {color: black;} 
+a.card:visited {
+	color: black;
+} 
 
 
 
